# PuzzleScript-interface

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  basic_client.py  check_ui.js  client.js  context.acdl  game_history.jsonl  observer.txt  package-lock.json  package.json  project.md  pyproject.toml  requirements.txt  research_and_plan.md  server.js
benchmarks/puzzlescript/: README.md  manifest.json
client/: README.md  inspect_rules.py  play_arc_client.py  play_arc_gui.py  run_arc_agent.py  screen_dashboard.py  terminal_dashboard.py
client/arc/: __init__.py  arcade_env.py  base_env.py  types.py
docs/: goal-recognition-dropped-games.md
examples/: basic_client.py
games/: transition.txt
notebookLM/: intro-sources.md
puzzlescript-server/: SERVER_EXPLANATION.md  client.js  package-lock.json  package.json  server.js
puzzlescript_interface/: README.md  __init__.py
rules/: midas_rules.txt  sokoban-basic_rules -ingame-learning.txt  sokoban-basic_rules.txt  transition_rules.txt
scripts/: build-goal-recognition-results-viewer.js  organize-report-answers.js  run-helped-live-sokoban.ps1  run-percept-live-sokoban.ps1  run-strict-live-sokoban.ps1  start-owned-processes.ps1
side_quests/: __init__.py  keys.py  run_goal_recognition.py
src/: arc_agi.py  arc_agi_endpoint.py  client.js  env_adapter.py  learning_mode.py  llm_client.py  play_arc_client.py  prompts.py  puzzlescript.py  run_arc_agent.py  server.js  solving_mode.py  terminal_dashboard.py
studies/: __init__.py
thinking-comparison/: README.md
todo/: next-week-professor-homework.md
(+243 files in other folders)
